# rdt-trading-system

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ACTIONABLE_100X_STRATEGY.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Makefile  QUICK_START.md  QUICK_START_100X.md  README.md  WEALTH_OPTIMIZATION.md  WEALTH_STRATEGY_100X.md  __init__.py  alembic.ini  docker-compose.yml  docker-run.sh  main.py  monitor.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements-web.txt  requirements.txt  start_dashboard.py  start_trading.sh  test_ibkr_connection.py  test_risk_profiles.py
.github/workflows/: ci.yml  deploy.yml  security.yml
accounts/: __init__.py  account_manager.py  models.py  portfolio_aggregator.py
agents/: __init__.py  adaptive_learner.py  analyzer_agent.py  base.py  daily_stats_agent.py  data_collection_agent.py  events.py  executor_agent.py  learning_agent.py  orchestrator.py  outcome_tracker.py  research_agent.py  risk_agent.py  scanner_agent.py
alerts/: __init__.py  alert_manager.py  daily_summary_task.py  delivery_tracker.py  discord_alert.py  email_alert.py  email_templates.py  notifier.py  pushover_alert.py  retry.py  schedule_config.py  scheduler.py  sms_alert.py  telegram_alert.py
api/: __init__.py
api/graphql/: __init__.py  auth.py  examples.graphql  resolvers.py  schema.py  types.py  views.py
api/v1/: __init__.py  auth.py  routes.py
automation/: trading_bot.py
backtesting/: __init__.py  data_loader.py  engine.py  engine_enhanced.py  engine_intraday.py  parameter_optimizer.py
brokers/: __init__.py  base.py  broker_interface.py  failover_manager.py  paper_broker.py
brokers/ibkr/: __init__.py  client.py  config.py  orders.py  test_connection.py
brokers/paper/: __init__.py  simulator.py
brokers/schwab/: __init__.py  auth.py  client.py  test_connection.py
config/: __init__.py  settings.py  watchlists.py
data/database/: __init__.py  connection.py  historical_cache.py  ml_repository.py  models.py  trades_repository.py
data/optimization/: optimization_2025-12-29.json
data/providers/: __init__.py  alpha_vantage_provider.py  base.py  ibkr_provider.py  provider_manager.py  yfinance_provider.py
data/retention/: __init__.py  archiver.py  cleaner.py  config.py  policies.py
docker/: loki-config.yml  postgres-init.sql  timescale-init.sql
docs/: LEARNING_AGENT_GUIDE.md  ML_ANALYZER_QUICK_START.md  timescaledb-setup.md
examples/: ensemble_example.py  feature_engineering_ml_integration.py  ibkr_example.py  integrate_learning_agent.py  learning_agent_example.py  regime_detection_demo.py  regime_strategy_integration.py  risk_agent_example.py  test_feature_engineering.py  test_learning_agent.py  test_risk_agent.py
migrations/: README  env.py
ml/: ENSEMBLE_SUMMARY.md  FEATURE_CATALOG.md  FEATURE_ENGINEERING_README.md  FEATURE_ENGINEERING_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.txt  INTEGRATION_GUIDE.md  QUICKSTART_REGIME_DETECTION.md  QUICK_REFERENCE.md  README.md  REGIME_DETECTION_CHEATSHEET.md  REGIME_DETECTION_README.md  __init__.py  drift_detector.py  dynamic_sizer.py  ensemble.py  entry_timing.py  exit_predictor.py  feature_engineering.py  gpu_utils.py  model_monitor.py  model_version.py  monitoring_store.py  regime_detector.py  safe_model_loader.py  schema.sql  signal_decay.py  strategy_models.py
models/: regime_detector.pkl  training_metrics.json
monitoring/: __init__.py  dashboard.py  metrics.py
options/: __init__.py  chain.py  chain_provider.py  config.py  executor.py  exit_manager.py  iv_analyzer.py  models.py  paper_executor.py  position_sizer.py  pricing.py  risk.py  strategy_selector.py
payments/: __init__.py  plans.py  stripe_client.py  webhooks.py
portfolio/: __init__.py  position_manager.py
rdt_logging/: __init__.py  config.py  context.py  formatters.py  handlers.py
risk/: __init__.py  models.py  position_sizer.py  risk_manager.py
scanner/: __init__.py  intermarket_analyzer.py  mean_reversion_scanner.py  news_filter.py  realtime_scanner.py  regime_params.py  sector_filter.py  signal_metrics.py  signal_validator.py  timeframe_analyzer.py  trend_detector.py  vix_filter.py
scripts/: audit_murphy_impact.py  auto_start.sh  backfill_ml_data.py  backup_db.py  create_admin.py  create_api_user.py  db_migrate.py  docker-setup.sh  download_intraday_data.py  ensure_ibgateway_ready.sh  ensure_xvfb_ready.sh  export_trading_stats.py  generate_training_data.py  health_check.sh  init_db.py  optimize_intraday.py  optimize_models.py  run_backtest.py  run_intraday_backtest.py  run_load_test.py  run_retention.py  run_walkforward.py  run_walkforward_v2.py  start_ibgateway.sh  test_murphy_features.py  train_ensemble.py  train_from_history.py  train_random_forest.py  train_regime_detector.py  train_signal_classifier.py  train_xgboost.py  wait_for_ibkr_socket.sh
shared/: data_provider.py  intraday_data.py  news_sentiment.py
strategies/: __init__.py  base_strategy.py  gap_fill.py  kelly_sizer.py  leveraged_etf.py  multi_strategy_engine.py  pead.py  registry.py  rrs_momentum.py  rsi2_mean_reversion.py  timeframes.py  trend_breakout.py
tests/: __init__.py  conftest.py  test_agents.py  test_alerts.py  test_brokers.py  test_data_providers.py  test_options_chain_provider.py  test_options_exit_manager.py  test_options_models.py  test_options_paper_executor.py  test_options_paper_integration.py  test_options_persistence.py  test_options_position_sizer.py  test_options_pricing.py  test_options_risk_manager.py  test_options_strategy_selector.py  test_order_monitor.py  test_position_tracker.py  test_regime_detector.py  test_risk_manager.py  test_scanner.py  test_trading_bot.py
tracing/: __init__.py  config.py  decorators.py  middleware.py  tracer.py
trading/: __init__.py  advanced_orders.py  execution_tracker.py  intraday_exit_manager.py  order_monitor.py  position_tracker.py
utils/: __init__.py  paths.py  timezone.py  validators.py
web/: __init__.py  app.py  auth.py  forms.py  middleware.py  push_notifications.py  session_manager.py  trading_init.py  websocket.py
(+108 files in other folders)
