[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdt-trading-system"
version = "1.0.0"
description = "Real Relative Strength (RRS) Trading System based on r/RealDayTrading Methodology"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "RDT Trading Team", email = "team@rdt-trading.example.com"}
]
maintainers = [
    {name = "RDT Trading Team", email = "team@rdt-trading.example.com"}
]
keywords = [
    "trading",
    "algorithmic-trading",
    "relative-strength",
    "stock-market",
    "day-trading",
    "machine-learning",
    "quantitative-finance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "yfinance>=0.2.28",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.0",
    "loguru>=0.7.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
    "detect-secrets>=1.4.0",
]
ml = [
    "tensorflow>=2.15.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "hmmlearn>=0.3.0",
    "optuna>=3.0.0",
]
brokers = [
    "schwab-py>=1.0.0",
    "ib-insync>=0.9.86",
]
all = [
    "rdt-trading-system[dev,ml,brokers]",
]

[project.urls]
Homepage = "https://github.com/rdt-trading/rdt-trading-system"
Documentation = "https://rdt-trading-system.readthedocs.io"
Repository = "https://github.com/rdt-trading/rdt-trading-system.git"
Issues = "https://github.com/rdt-trading/rdt-trading-system/issues"
Changelog = "https://github.com/rdt-trading/rdt-trading-system/blob/main/CHANGELOG.md"

[project.scripts]
rdt-scanner = "scanner.realtime_scanner:main"
rdt-bot = "automation.trading_bot:main"
rdt-backtest = "backtesting.engine_enhanced:main"

[project.entry-points."rdt.strategies"]
rrs = "shared.indicators.rrs:RRSStrategy"

[tool.setuptools]
packages = ["scanner", "automation", "shared", "alerts", "config", "agents", "portfolio", "risk", "backtesting", "monitoring", "brokers"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# =============================================================================
# Black Configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | data
    | migrations
    | __pycache__
)/
'''

# =============================================================================
# isort Configuration
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "data/*",
    "migrations/*",
    ".venv/*",
    "venv/*",
    "__pycache__/*"
]
known_first_party = [
    "scanner",
    "automation",
    "shared",
    "alerts",
    "config",
    "agents",
    "portfolio",
    "risk",
    "backtesting",
    "monitoring",
    "brokers"
]
known_third_party = [
    "pandas",
    "numpy",
    "flask",
    "sqlalchemy",
    "pydantic",
    "requests",
    "yfinance",
    "sklearn"
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
exclude = [
    "data/",
    "migrations/",
    ".venv/",
    "venv/",
    "build/",
    "dist/",
    "__pycache__/",
    "tests/"
]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "schwab.*",
    "ib_insync.*",
    "ta.*",
    "hmmlearn.*",
    "plyer.*",
    "twilio.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# =============================================================================
# Pylint Configuration
# =============================================================================
[tool.pylint.main]
jobs = 0
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle"
]
ignore = [
    "data",
    "migrations",
    ".venv",
    "venv",
    "__pycache__"
]
ignore-patterns = [
    "test_.*\\.py$",
    "conftest\\.py$"
]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "line-too-long",
    "invalid-name",
    "duplicate-code",
    "fixme",
    "broad-except",
    "logging-fstring-interpolation",
    "import-outside-toplevel"
]
enable = [
    "useless-suppression"
]

[tool.pylint.format]
max-line-length = 100
max-module-lines = 1500

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 8
max-branches = 15
max-statements = 60
max-parents = 10
max-attributes = 15
min-public-methods = 1
max-public-methods = 25

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.pylint.typecheck]
ignored-modules = [
    "numpy",
    "pandas",
    "sklearn",
    "tensorflow",
    "torch"
]

[tool.pylint.reports]
output-format = "colorized"
reports = true
score = true

# =============================================================================
# Bandit Configuration
# =============================================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    "data",
    ".venv",
    "venv",
    "migrations",
    "__pycache__"
]
skips = [
    "B101",  # assert_used - acceptable in tests
    "B104",  # hardcoded_bind_all_interfaces - needed for Docker
    "B311"   # random - not used for security purposes
]
targets = ["."]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "conftest.py"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--color=yes"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "broker: marks tests requiring broker connection",
    "ml: marks tests requiring ML dependencies"
]
asyncio_mode = "auto"

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["."]
branch = true
parallel = true
omit = [
    "tests/*",
    "data/*",
    "migrations/*",
    ".venv/*",
    "venv/*",
    "*/__pycache__/*",
    "setup.py",
    "conftest.py"
]

[tool.coverage.paths]
source = [
    ".",
    "/app"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "pass",
    "\\.\\.\\."
]
fail_under = 70
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"
title = "RDT Trading System Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

# =============================================================================
# Commitizen Configuration
# =============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "release: version $new_version"
